--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="../../Search/src/scss/main.css">
+  <link rel="stylesheet" href="scss/main.css">
   <title>Search repositories</title>
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
 </head>
@@ -18,7 +18,7 @@
   <div class="results__container">
   </div>
 </main>
-<script src="../../Search/src/js/search.js"></script>
+<script src="js/search.js"></script>
 </body>
 </html>
 
